--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Welcome</h1>
+<app-nav-bar></app-nav-bar>
+<div class="container" style="margin-top: 140px;" >
+  <h1>Welcome to my {{ title }}</h1>
+  <li class="list-unstyled" *ngFor="let product of products">
+    {{product.name}} with the price of {{product.price}}
+  </li>
+</div>
