--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 140px;" >
-  <h1>Welcome to my {{ title }}</h1>
-  <li class="list-unstyled" *ngFor="let product of products">
-    {{product.name}} with the price of {{product.price}}
-  </li>
+  <app-shop></app-shop>
 </div>
