--- a/client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/client/src/app/core/nav-bar/nav-bar.component.scss
@@ -10,3 +10,20 @@
     top: 20px;
     right: 235px;
 }
+
+a{
+    text-decoration: none;
+    color: #343a40;
+
+    &.active{
+        color: orange;
+    }
+}
+
+.logo{
+    cursor: pointer;
+    
+    &:focus{
+        outline: none;
+    }
+}
