--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,14 +1,14 @@
 <div class="card h-100 shadow-sm">
     <img src="{{product.image}}" alt="{{product.name}}" class="img-fluid bg-info">
     <div class="card-body d-flex flex-column">
-        <a href="#">
+        <a routerLink="/shop/{{product.id}}">
             <h6 class="text-uppercas">{{product.name}}</h6>
         </a>
-        <span class="mb-2">{{product.price | currency}}</span>
+        <span class="mb-2">{{product.price | currency:'NGN':'symbol-narrow'}}</span>
         <div class="btn-group mt-auto">
           <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart fa-2x mr-2
            text-dark"></button>
-          <button type="button" class="btn btn-outline-secondary">View</button>
+          <button routerLink="/shop/{{product.id}}"  type="button" class="btn btn-outline-secondary">View</button>
         </div>
       </div>
     </div>
