--- a/client/src/app/core/server-error/server-error.component.html
+++ b/client/src/app/core/server-error/server-error.component.html
@@ -1,3 +1,17 @@
 <div class="container mt-5">
-    <h1>A server error has occured</h1>
+    <h4>A server error has occured - refreshing the page will make the exception dissapear</h4>
+    <ng-container *ngIf="error.message">
+    <h5 class="text-danger">Error:{{error.message}}</h5>
+    <p class="font-weight-bold">Note: If you are seeing this then angular is not responsible</p>
+    <p>What to do next</p>
+    <ol>
+            <li>Open chrome dev tools</li>
+            <li>Inspect the network tab</li>
+            <li>Check the failing request</li>
+            <li>Examine the request url - Make sure it is correct</li>
+            <li>Reproduce the error in postman, if its the same response, then its not an angular issue</li>
+    </ol>
+    <p>Following is the stack trace</p>
+    <code class="mt-5" style="background-color:whitesmoke">{{error.details}}</code>
+</ng-container>
 </div>
