--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,14 +1,16 @@
 <div class="card h-100 shadow-sm">
+  <div class="image position-relative" style="cursor: pointer;">
     <img src="{{product.image}}" alt="{{product.name}}" class="img-fluid bg-info">
+    <div class="d-flex align-items-center justify-content-center hover-overlay">
+      <button type="button" class="btn btn-primary fa fa-shopping-cart fa-2x mr-2
+           text-dark"></button>
+          <button routerLink="/shop/{{product.id}}"  type="button" class="btn btn-primary">View</button>
+    </div>
+  </div>
     <div class="card-body d-flex flex-column">
         <a routerLink="/shop/{{product.id}}">
             <h6 class="text-uppercas">{{product.name}}</h6>
         </a>
         <span class="mb-2">{{product.price | currency:'NGN':'symbol-narrow'}}</span>
-        <div class="btn-group mt-auto">
-          <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart fa-2x mr-2
-           text-dark"></button>
-          <button routerLink="/shop/{{product.id}}"  type="button" class="btn btn-outline-secondary">View</button>
-        </div>
       </div>
     </div>
