--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,40 +1,41 @@
-<div class="container">
+<div class="container mt-3">
     <div class="row">
         
         <section class="col-3">
-            
-            <h5 class="text-warning ml-3">Sort</h5>
-        <select name="" id="" class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
-            <option *ngFor="let sort of sortOptions" 
-            [value]="sort.value"
-            >
-                {{sort.name}}
-            </option>
-        </select>
+            <ng-container *ngIf="productTypes && brands">
+                <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
+                <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
+                    <option *ngFor="let sort of sortOptions" 
+                    [value]="sort.value"
+                    >
+                        {{sort.name}}
+                    </option>
+                </select>
 
-            <h5 class="text-warning ml-3">Brands</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" 
-                    *ngFor="let brand of brands"
-                    [class.active]="brand.id === this.shopParams.brandId"
-                    [value]="brand.id"
-                    (click)="onBrandSelected(brand.id)"
-                >
-                    {{brand.name}}
-                </li>
-            </ul>
+                <h5 class="text-warning ml-3">Brands</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" 
+                        *ngFor="let brand of brands"
+                        [class.active]="brand.id === this.shopParams.brandId"
+                        [value]="brand.id"
+                        (click)="onBrandSelected(brand.id)"
+                    >
+                        {{brand.name}}
+                    </li>
+                </ul>
 
-            <h5 class="text-warning ml-3">Types</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" 
-                    *ngFor="let productType of productTypes"
-                    [class.active]="productType.id === this.shopParams.typeId"
-                    [value]="productType.id"
-                    (click)="onTypeSelected(productType.id)"
-                >
-                    {{productType.name}}
-                </li>
-            </ul>
+                <h5 class="text-warning ml-3">Types</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" 
+                        *ngFor="let productType of productTypes"
+                        [class.active]="productType.id === this.shopParams.typeId"
+                        [value]="productType.id"
+                        (click)="onTypeSelected(productType.id)"
+                    >
+                        {{productType.name}}
+                    </li>
+                </ul>
+            </ng-container>
         </section>
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
@@ -43,7 +44,7 @@
                 [pageSize]="this.shopParams.pageSize"
                 [pageNumber]="this.shopParams.pageNumber"
                 ></app-paging-header>
-                <div class="form-inline mt-2">
+                <div class="form-inline" *ngIf="products">
                     <input (keyup.enter)="onSearch()" type="text" class="form-control mr-2" #search style="width: 300px" placeholder="Search" name="" id="">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
                     <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
