--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
     </nav>
     <div class="d-flex align-items-center">
         <a>
-        <i href="" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
+        <i routerLink="/basket" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
             <div class="cart-no">5</div>
     </a>
         <a href="" class="btn btn-outline-secondary mr-2">Login</a>
