--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,7 +2,7 @@
   <div class="image position-relative" style="cursor: pointer;">
     <img src="{{product.image}}" alt="{{product.name}}" class="img-fluid bg-info">
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-      <button type="button" class="btn btn-primary fa fa-shopping-cart fa-2x mr-2
+      <button (click)="addItemToBasket()" type="button" class="btn btn-primary fa fa-shopping-cart fa-2x mr-2
            text-dark"></button>
           <button routerLink="/shop/{{product.id}}"  type="button" class="btn btn-primary">View</button>
     </div>
