--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -1,1 +1,69 @@
-<p>basket works!</p>
+<div class="container mt-4">
+    <div *ngIf="(basket$ | async) === null" class="">
+        <p>There are no Item(s) in your basket</p>
+    </div>
+    
+    <!-- <div *ngIf="(basket$ | async) as basket" class=""> -->
+        <div *ngIf="basket$ | async">
+        <div class="pb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 py-5 mb-1">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th class="border-0 bg-light" scope="col">
+                                            <div class="p-2 px-3 text-uppercase">Product</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Price</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Quantity</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2  text-uppercase">Total</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Remove</div>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let item of (basket$ | async).items">
+                                        <th scope="row">
+                                            <div class="p-2">
+                                                <img class="image-fluid" style="max-height: 50px;" src="{{item.pictureUrl}}" alt="{{item.productName}}">
+                                                <div class="ml-3 d-inline-block align-middle">
+                                                    <h5 class="mb-0">
+                                                        <a routerLink="/shop/{{item.id}}" class="text-dark">{{item.productName}}</a>
+                                                        <span class="text-muted font-weight-normal font-italic d-block">Type:{{item.productType}}</span>
+                                                    </h5>
+                                                </div>
+                                            </div>
+                                        </th>
+                                        <td class="align-middle"><strong>{{item.price | currency: 'NGN':'symbol-narrow'}}</strong></td>
+                                        <td class="align-middle">
+                                            <div class="d-flex align-items-center">
+                                                <i class="fa fa-minus-circle text-warning mr-2" style="cursor:pointer;font: size 2em;"></i>
+                                                <span class="font-weight-bold" style="font-size:1.5em;">{{item.quantity}}</span>
+                                                <i class="fa fa-plus-circle text-warning mx-2" style="cursor:pointer;font: size 2em;"></i>
+                                            </div>
+                                        </td>
+                                        <td class="align-middle"><strong>{{item.price * item.quantity | currency: 'NGN' : 'symbol-narrow'}}</strong></td>
+                                        <td class="align-middle text-center">
+                                            <a class="text-danger">
+                                                <i class="fa fa-trash" style="font-size: 2em;"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
