--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -46,15 +46,15 @@
                                         <td class="align-middle"><strong>{{item.price | currency: 'NGN':'symbol-narrow'}}</strong></td>
                                         <td class="align-middle">
                                             <div class="d-flex align-items-center">
-                                                <i class="fa fa-minus-circle text-warning mr-2" style="cursor:pointer;font: size 2em;"></i>
+                                                <i (click)="decrementItemQuantity(item)" class="fa fa-minus-circle text-warning mr-2" style="cursor:pointer;font: size 2em;"></i>
                                                 <span class="font-weight-bold" style="font-size:1.5em;">{{item.quantity}}</span>
-                                                <i class="fa fa-plus-circle text-warning mx-2" style="cursor:pointer;font: size 2em;"></i>
+                                                <i (click)="incrementItemQuantity(item)" class="fa fa-plus-circle text-warning mx-2" style="cursor:pointer;font: size 2em;"></i>
                                             </div>
                                         </td>
                                         <td class="align-middle"><strong>{{item.price * item.quantity | currency: 'NGN' : 'symbol-narrow'}}</strong></td>
                                         <td class="align-middle text-center">
                                             <a class="text-danger">
-                                                <i class="fa fa-trash" style="font-size: 2em;"></i>
+                                                <i (click)="removeBasketItem(item)" class="fa fa-trash" style="font-size: 2em; cursor: pointer;"></i>
                                             </a>
                                         </td>
                                     </tr>
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-6 offset-6">
                         <app-order-totals></app-order-totals>
-                        <a routerLink="/checkout" class="btn btn-outline-primary py-2 btn-clock">
+                        <a routerLink="/checkout" class="btn btn-outline-primary py-2 btn-block">
                             Proceed to Checkout
                         </a>
                     </div>
