--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
     </nav>
     <div class="d-flex align-items-center">
         <a>
-        <i routerLink="/basket" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
+        <i routerLink="/basket" style="cursor:pointer" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
             <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
     </a>
         <a href="" class="btn btn-outline-secondary mr-2">Login</a>
