--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
         <i routerLink="/basket" style="cursor:pointer" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
             <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
     </a>
-        <a href="" class="btn btn-outline-secondary mr-2">Login</a>
-        <a href="" class="btn btn-outline-secondary mr-3">Sign Up</a>
+        <a routerLink="/account/login" class="btn btn-outline-secondary mr-2">Login</a>
+        <a routerLink="/account/register" class="btn btn-outline-secondary mr-3">Sign Up</a>
     </div>
 </div>
