--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -9,8 +9,13 @@
         <a>
         <i routerLink="/basket" style="cursor:pointer" class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
             <div *ngIf="(basket$ | async) as basket" class="cart-no">{{basket.items.length}}</div>
-    </a>
-        <a routerLink="/account/login" class="btn btn-outline-secondary mr-2">Login</a>
+        </a>
+        <ng-container *ngIf="(currentUser$ | async) === null">
+            <a routerLink="/account/login" class="btn btn-outline-secondary mr-2">Login</a>
         <a routerLink="/account/register" class="btn btn-outline-secondary mr-3">Sign Up</a>
+        </ng-container>
+        <ng-container *ngIf="currentUser$ | async">
+            <a href="#">{{(currentUser$ | async).displayName}}</a>
+        </ng-container>
     </div>
 </div>
