--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -15,7 +15,23 @@
         <a routerLink="/account/register" class="btn btn-outline-secondary mr-3">Sign Up</a>
         </ng-container>
         <ng-container *ngIf="currentUser$ | async">
-            <a href="#">{{(currentUser$ | async).displayName}}</a>
+            <div class="dropdown ml-3 mr-3" dropdown>
+                <a class="dropdown-toggle" style="cursor: pointer;" dropdownToggle> 
+                    <strong> Welcome {{(currentUser$ | async).displayName}}</strong>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" style="cursor: pointer;" *dropdownMenu>
+                    <a routerLink="/basket" class="dropdown-item d-flex align-items-center py-2">
+                        <i class="fa fa-shopping-cart mr-3"></i> View Basket
+                    </a>
+                    <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
+                        <i class="fa fa-history mr-3"></i> View Orders
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a (click)="logout()" class="dropdown-item d-flex align-items-center py-2">
+                        <i class="fa fa-sign-out mr-3"></i>Sign Out
+                    </a>
+                </div>
+            </div>
         </ng-container>
     </div>
 </div>
