--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -1,21 +1,21 @@
 <div class="d-flex justify-content-center mt-3">
-    <div class="col-3">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-signin">
-            <div class="text-center mb-3">
-            <h1 class="h3 mb-3 font-weight-normal">Login</h1>
-            </div>
-        
-            <div class="form-label-group">
-            <input formControlName="emailAddress" type="email" id="inputEmail" class="form-control" placeholder="Email address">
-            <label for="inputEmail">Email address</label>
-            </div>
-        
-            <div class="form-label-group">
-            <input formControlName="password" type="password" id="inputPassword" class="form-control" placeholder="Password">
-            <label for="inputPassword">Password</label>
-            </div>
-            
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
-    </div>
+  <div class="col-3">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-signin">
+      <div class="text-center mb-3">
+        <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+      </div>
+      <app-text-input formControlName="emailAddress" [label]="'Email Address'"></app-text-input>
+      <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
+
+      <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+  </div>
 </div>
+
+<!-- <div class="col-4">
+  <p>Form Status{{loginForm.status}}</p>
+  <p>Email Status{{loginForm.get('email').status}}</p>
+  <p>Email Touched{{loginForm.get('email').touched}}</p>
+  <p>Email Dirty{{loginForm.get('email').dirty}}</p>
+  <pre>{{loginForm.value | json}}</pre>
+</div> -->
