--- a/client/src/app/account/register/register.component.html
+++ b/client/src/app/account/register/register.component.html
@@ -8,7 +8,13 @@
       <app-text-input formControlName="email" [label]="'Email Address'"></app-text-input>
       <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
 
-      <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+
+      <ul class="text-danger" *ngIf="errors">
+        <li class="list-unstyled" *ngFor="let error of errors"></li>
+        {{errors}}
+      </ul>
+
+      <button  class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     </form>
   </div>
 </div>
