--- a/client/src/app/shared/components/text-input/text-input.component.scss
+++ b/client/src/app/shared/components/text-input/text-input.component.scss
@@ -57,6 +57,14 @@
   color: #777;
 }
 
+.loader{
+  position: absolute;
+  width: auto;
+  top: 15px;
+  right: 10px;
+  margin-top: 0;
+}
+
 /* Fallback for Edge
 -------------------------------------------------- */
 @supports (-ms-ime-align: auto) {
